--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header {
     position: fixed;
     right: 0;
     top: 0;
-    z-index: 9999;
+    z-index: 1000;
     width: 100%;
     display: flex;
     align-items: center;
@@ -192,6 +192,10 @@ body {
 .libreria {
     display: grid;
     grid-row: 50%;
+    background-color: #ffffff97;
+    padding: 5rem;
+    border-radius:1rem ;
+    box-shadow: 10px;
 }
 
 .row {
@@ -199,15 +203,29 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
 }
 
 .libreria i {
     font-size: 4rem;
     margin: 1rem;
+    transition: .55s;
+    text-align: center;
+}
+.libreria i:hover {
+    font-size: 5rem;
+    margin: 1rem;
+    transition: .55s;
 }
 
 .libreria a {
     margin: 1rem;
+    text-align: center;
+
+}
+.libreria a:hover {
+    margin: 1rem;
+    text-align: left;
 }
 
 /* Fondo que cambia */
