--- a/personajes/elfo/css/style.css
+++ b/personajes/elfo/css/style.css
@@ -57,7 +57,7 @@ header {
     height: 100%;
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(245.59deg, #6E7AE6 0%, #878BAD 28.53%, #AFB4E1 75.52%);
+    background: linear-gradient(245.59deg, #C5E6DD 0%, #7EE1C7 28.53%, #61AD99 75.52%);
     position: relative;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -303,7 +303,7 @@ section {
 }
 
 .no-parallax{
-    background: linear-gradient(245.59deg, #878BAD 0%, #AFB4E1 28.53%, white 75.52%);
+    background: linear-gradient(245.59deg, #61AD99 0%, #7EE1C7 28.53%, #C5E6DD 75.52%);
     z-index: 999;
     transform-style: preserve-3d ;
     position: relative;
